// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DidOpen Detects not existant dockers 1`] = `
DiagnosticList {
  "list": [],
}
`;

exports[`DidOpen Job without steps 1`] = `
[
  {
    "data": [],
    "message": "Invalid type. Expected: object, given: array",
    "range": {
      "end": {
        "character": 31,
        "line": 8,
      },
      "start": {
        "character": 2,
        "line": 6,
      },
    },
    "severity": 1,
    "source": "cci-language-server",
  },
  {
    "data": [],
    "message": "steps is required",
    "range": {
      "end": {
        "character": 31,
        "line": 5,
      },
      "start": {
        "character": 2,
        "line": 3,
      },
    },
    "severity": 1,
    "source": "cci-language-server",
  },
  {
    "data": [],
    "message": "Job is unused",
    "range": {
      "end": {
        "character": 0,
        "line": 0,
      },
      "start": {
        "character": 0,
        "line": 0,
      },
    },
    "severity": 2,
    "source": "cci-language-server",
  },
]
`;

exports[`DidOpen Unused job 1`] = `
DiagnosticList {
  "list": [
    {
      "data": [],
      "message": "Job is unused",
      "range": {
        "end": {
          "character": 6,
          "line": 3,
        },
        "start": {
          "character": 2,
          "line": 3,
        },
      },
      "severity": 2,
      "source": "cci-language-server",
    },
  ],
}
`;
